--- a/package.json
+++ b/package.json
@@ -8,24 +8,45 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.20.0",
     "expo": "~38.0.9",
-    "expo-splash-screen": "^0.5.0",
+    "expo-location": "~8.2.1",
+    "expo-splash-screen": "^0.3.1",
     "expo-status-bar": "^1.0.0",
     "expo-updates": "~0.2.10",
+    "lottie-react-native": "~2.6.1",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "~0.62.2",
+    "react-native-axios": "^0.17.1",
+    "react-native-dotenv": "^2.4.0",
     "react-native-gesture-handler": "~1.6.1",
+    "react-native-maps": "^0.27.1",
     "react-native-reanimated": "~1.9.0",
     "react-native-screens": "~2.9.0",
     "react-native-unimodules": "~0.10.1",
-    "react-native-web": "~0.11.7"
+    "react-native-vector-icons": "^7.0.0",
+    "react-native-web": "~0.11.7",
+    "styled-components": "^5.1.1"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
+    "@types/jest": "^26.0.12",
+    "@types/react": "^16.9.49",
+    "@types/react-native": "^0.63.12",
+    "@types/react-native-dotenv": "^0.2.0",
+    "@types/react-native-vector-icons": "^6.4.5",
+    "@types/react-test-renderer": "^16.9.3",
+    "@types/styled-components": "^5.1.2",
     "babel-jest": "~25.2.6",
+    "eslint": "6.8.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-import-resolver-typescript": "^2.2.1",
+    "eslint-plugin-prettier": "^3.1.4",
     "jest": "~25.2.6",
-    "react-test-renderer": "~16.11.0"
+    "prettier": "^2.1.1",
+    "react-test-renderer": "~16.11.0",
+    "typescript": "^4.0.2"
   },
   "jest": {
     "preset": "react-native"
